# reuben_hackathon

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_farms.py  0002_create_farm_analyses.py  0003_add_climate_summary_to_analyses.py  0004_add_risk_scores_to_analyses.py  0005_create_recommendations.py  0006_add_expected_harvest_date_to_farms.py  0007_create_knowledge_chunks.py
backend/api/: health.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/modules/analysis/: models.py  remote_sensing.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py
backend/app/modules/climate/: provider.py  schemas.py
backend/app/modules/farms/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/geospatial/: schemas.py  service.py
backend/app/modules/knowledge/: chunking.py  drive_client.py  models.py  parsers.py  repository.py  retrieval.py  router.py  schemas.py  service.py
backend/app/modules/recommendations/: embeddings.py  forecast.py  models.py  prompts.py  repository.py  retrieval.py  router.py  schemas.py  service.py
backend/app/modules/risk/: schemas.py  scoring.py
backend/database/: session.py
backend/shared/: config.py
backend/tests/: test_geospatial_service.py  test_health.py  test_knowledge.py  test_recommendations.py  test_risk_scoring.py
frontend/: Dockerfile  (+3 more)
(+15 files in other folders)
