[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-intelligence-backend"
version = "0.1.0"
description = "FastAPI modular monolith for farm-level climate intelligence"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "celery>=5.4.0",
  "earthengine-api>=1.2.0",
  "fastapi>=0.115.0",
  "geoalchemy2>=0.15.2",
  "httpx>=0.27.2",
  "numpy>=1.26.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "pypdf>=4.0.0",
  "redis>=5.0.8",
  "shapely>=2.0.6",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.3"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
